<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_ocean"
    tools:viewBindingIgnore="true"
    tools:context=".activity_login">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/ic_logo"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/tv_subtitle"
        app:shapeAppearanceOverlay="@style/Circular"/>

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_email"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="55dp"
        android:text="Login"
        android:textColor="@color/black"
        android:textSize="50sp" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_custom"
        android:text="@string/login"
        android:textColor="@android:color/white" />


    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/e_mail"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:layout_above="@id/et_password"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Member? Sign up"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>


    <TextView
        android:id="@+id/btnForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:textSize="18sp"
        android:text="Forgot password? Click here"
        android:textColor="@color/white" />

</RelativeLayout>